--- a/view/1.1/1-1.md
+++ b/view/1.1/1-1.md
@@ -1,8 +1,35 @@
 #自定义绘制四个级别
 ---
 ##1.Canvas的drawXXX()系列方法以及paint最常用法
+###1.1
+- onDraw方法通常会重复调用，所以尽量避免在这个方法中做一些创建对象的操作
+
+###1.2 canvas.drawXXX  Paint 基础
+Paint.setStyle() 设置绘制模式
+Paint.setColor() 设置颜色
+Paint.setStrokeWidth() 设置线条宽度
+Paint.setTextSize() 设置蚊子大小
+Paint.setAntiAlias() 设置抗锯齿开关
+
+Canvas  drawColor drawARGB drawRGB
+这类方法通常是 用于绘制之前****设置底色****，或者在绘制之后****设置半透明蒙版****
 
 
+Android 坐标系，左上角为圆点，x轴往右为正，y轴往下为正
+
+Canvas drawPath(Path p ,Paint paint)画自定义图形
+Path 可以描述 直线，二次曲线，三次曲线，圆，椭圆，弧形，矩形，圆角矩形。    
+
+
+Path 有俩类方法   
+
+- 直接描述路径  
+第一组addXXX()之类画图形的方法    
+第二组xxxTo() 画线（直线或曲线）的方法  
+- 辅助的设置或计算
+Path setFillType设置填充方式，用来设置图形相交时的填充算法  
+EVEN_ODD（交叉填充）:奇偶原则，对于平面中的任意一点，向任意方向射出一条射线，射线与图形相交次数（相切不算）如果是奇数，则认为点在图形内部，是要涂色的区域。如果是偶数，则这个点在图形外部，不需要涂色      
+WINDING(全填充)：非零环绕数原则，需要图形中所有线条都是有绘制方向的。以 0 为初始值，对于射线和图形的所有交点，遇到每个顺时针的交点（图形从射线的左边向右穿过）把结果加 1，遇到每个逆时针的交点（图形从射线的右边向左穿过）把结果减 1，最终把所有的交点都算上，得到的结果如果不是 0，则认为这个点在图形内部，是要被涂色的区域；如果是 0，则认为这个点在图形外部，是不被涂色的区域。
 
 
 
