--- a/view/1.2/1-2.md
+++ b/view/1.2/1-2.md
@@ -244,7 +244,20 @@ getTextPath就是获取目标文字对应的path。
 
 ![getTextPath](http://ww1.sinaimg.cn/large/6ab93b35gy1fhrodm10sfj20i005m74z.jpg)
 
-
-
 ##3.drawText相关
+Paint 有些设置是与文字绘制相关的，即和drawText()相关  
+例如文字大小，间隔，文字效果等等  
+
 ##4.初始化
+也就是用来初始化Paint对象，或者是批量设置Paint的多个属性的方法  
+###4.1 reset()  
+重置Paint的所有属性为默认值，相当于重新new一个。不过性能肯定是更好的  
+###4.2 set(Paint src)  
+把传入的Paint的属性赋值到当前Paint  
+###4.3 setFlags(int flags)  
+批量设置flags。相当于调用他们的set方法。可以用**“|”**这个符号来设置多个。  
+>例如：
+>paint.setFlags(Paint.ANTI_ALIAS_FLAG|Paint.DITHER_FLAG)  
+>相当于  
+>paint.setAntiAlias(true)  
+>paint.setDither(true)  
