--- a/view/1.1绘制基础/1-1绘制基础.md
+++ b/view/1.1绘制基础/1-1绘制基础.md
@@ -1,37 +1,93 @@
 # 自定义绘制四个级别
 ---
 ## 1.Canvas的drawXXX()系列方法以及paint最常用法
-### 1.1
+### 1.1 注意
 - onDraw方法通常会重复调用，所以尽量避免在这个方法中做一些创建对象的操作
 
 ### 1.2 canvas.drawXXX  Paint 基础
-Paint.setStyle() 设置绘制模式
-Paint.setColor() 设置颜色
-Paint.setStrokeWidth() 设置线条宽度
-Paint.setTextSize() 设置蚊子大小
-Paint.setAntiAlias() 设置抗锯齿开关
+- Paint.setStyle() 设置绘制模式  
+- Paint.setColor() 设置颜色  
+- Paint.setStrokeWidth() 设置线条宽度  
+- Paint.setTextSize() 设置蚊子大小    
+- Paint.setAntiAlias() 设置抗锯齿开关   
 
-Canvas  drawColor drawARGB drawRGB
+- Canvas  drawColor drawARGB drawRGB
 这类方法通常是 用于绘制之前****设置底色****，或者在绘制之后****设置半透明蒙版****
 
 
-Android 坐标系，左上角为圆点，x轴往右为正，y轴往下为正
+- Android 坐标系，左上角为圆点，x轴往右为正，y轴往下为正
 
-Canvas drawPath(Path p ,Paint paint)画自定义图形
+- Canvas drawPath(Path p ,Paint paint)画自定义图形
 Path 可以描述 直线，二次曲线，三次曲线，圆，椭圆，弧形，矩形，圆角矩形。    
 
+#### 1.2.1 canvas.drawPicture
+  
+类似录像功能，只不过录制的是canvas中绘制的内容  
+beginRecording和endRecording 成对使用，最后通过picture.draw(Canvas canvas)方法  
 
-Path 有俩类方法   
+		
+		// 1.创建Picture
+		private Picture mPicture = new Picture();
+
+
+		// 2.录制内容方法
+		private void recording() {
+    	// 开始录制 (接收返回值Canvas)
+    	Canvas canvas = mPicture.beginRecording(500, 500);
+    	// 创建一个画笔
+    	Paint paint = new Paint();
+    	paint.setColor(Color.BLUE);
+    	paint.setStyle(Paint.Style.FILL);
+
+    	// 在Canvas中具体操作
+    	// 位移
+    	canvas.translate(250,250);
+    	// 绘制一个圆
+    	canvas.drawCircle(0,0,100,paint);
+
+    	mPicture.endRecording();
+		}
+
+
+
+		// 3.在使用前调用(我在构造函数中调用了)
+		public Canvas3(Context context, AttributeSet attrs) {
+    	super(context, attrs);
+    
+    	recording();    // 调用录制
+		}
+
+
+绘制完之后的使用方式：  
+1. 使用picture提供的draw方法绘制  
+2. 使用canvas提供的drawPicture方法绘制  
+3. 将picture包装成pictureDrawable,使用pictureDrawable 的draw方法绘制
+
+>上面的几种方法中,方法1 会在绘制完成后影响Canvas的状态(Matrix,clip等)  
+>方法2,3 可操作性比较强（即对绘制结果可控程度）  
+>方法1 在低版本的系统上绘制后可能会影响canvas的状态，所以一般不用这种方式绘制  
+
+
+#### 1.2.2 drawBitmap
+有一个重载方法，drawBitmap(Bitmap bitmap,Rect src,Rect dst,Paint paint)    
+src指的是图片被绘制的区域  ，dst 指定图片在屏幕上绘制的区域.如果src 与dst 不符合，会进行缩放!
+
+
+### 1.3 Path 有俩类方法   
 
 - 直接描述路径  
 第一组addXXX()之类画图形的方法    
-第二组xxxTo() 画线（直线或曲线）的方法  
-- 辅助的设置或计算
+第二组xxxTo() 画线（直线或曲线）的方法 ,moveTo(移动下次操作的起点位置)，setLastPoint(也是移动下次操作的起点位置，同时会影响上次操作的终点位置) , close(封闭路径，如果，连接了终点和起点但不能形成封闭图形，close 什么都不做)
+- 辅助的设置或计算  
 Path setFillType设置填充方式，用来设置图形相交时的填充算法  
 EVEN_ODD（交叉填充）:奇偶原则，对于平面中的任意一点，向任意方向射出一条射线，射线与图形相交次数（相切不算）如果是奇数，则认为点在图形内部，是要涂色的区域。如果是偶数，则这个点在图形外部，不需要涂色      
 WINDING(全填充)：非零环绕数原则，需要图形中所有线条都是有绘制方向的。以 0 为初始值，对于射线和图形的所有交点，遇到每个顺时针的交点（图形从射线的左边向右穿过）把结果加 1，遇到每个逆时针的交点（图形从射线的右边向左穿过）把结果减 1，最终把所有的交点都算上，得到的结果如果不是 0，则认为这个点在图形内部，是要被涂色的区域；如果是 0，则认为这个点在图形外部，是不被涂色的区域。
 
+---
+**API简介：**  
 
+
+![](http://ww1.sinaimg.cn/large/6ab93b35gy1fild913bo2j20gi0imt9b.jpg)
 
 
 ## 2.Paint完全攻略
