--- a/view/1.1绘制基础/1-1绘制基础.md
+++ b/view/1.1绘制基础/1-1绘制基础.md
@@ -73,15 +73,22 @@ beginRecording和endRecording 成对使用，最后通过picture.draw(Canvas can
 src指的是图片被绘制的区域  ，dst 指定图片在屏幕上绘制的区域.如果src 与dst 不符合，会进行缩放!
 
 
-### 1.3 Path 有俩类方法   
+### 1.3 Path
+Path有俩大类方法
 
-- 直接描述路径  
+- **直接描述路径**  
 第一组addXXX()之类画图形的方法    
-第二组xxxTo() 画线（直线或曲线）的方法 ,moveTo(移动下次操作的起点位置)，setLastPoint(也是移动下次操作的起点位置，同时会影响上次操作的终点位置) , close(封闭路径，如果，连接了终点和起点但不能形成封闭图形，close 什么都不做)
-- 辅助的设置或计算  
+第二组xxxTo() 画线（直线或曲线）的方法   
+moveTo(移动下次操作的起点位置)，setLastPoint(也是移动下次操作的起点位置，同时会影响上次操作的终点位置) , close(封闭路径，如果，连接了终点和起点但不能形成封闭图形，close 什么都不做)
+- **辅助的设置或计算**  
 Path setFillType设置填充方式，用来设置图形相交时的填充算法  
 EVEN_ODD（交叉填充）:奇偶原则，对于平面中的任意一点，向任意方向射出一条射线，射线与图形相交次数（相切不算）如果是奇数，则认为点在图形内部，是要涂色的区域。如果是偶数，则这个点在图形外部，不需要涂色      
 WINDING(全填充)：非零环绕数原则，需要图形中所有线条都是有绘制方向的。以 0 为初始值，对于射线和图形的所有交点，遇到每个顺时针的交点（图形从射线的左边向右穿过）把结果加 1，遇到每个逆时针的交点（图形从射线的右边向左穿过）把结果减 1，最终把所有的交点都算上，得到的结果如果不是 0，则认为这个点在图形内部，是要被涂色的区域；如果是 0，则认为这个点在图形外部，是不被涂色的区域。
+
+
+很多方法都有Direction , CW(顺时针)和CCW(逆时针)，作用很大：1.在添加图形时确定闭合顺序(各个点的记录顺序) 2.对图形的渲染结果有影响(是判断图形渲染的重要条件)   
+
+
 
 ---
 **API简介：**  
