--- a/view/1.1绘制基础/1-1绘制基础.md
+++ b/view/1.1绘制基础/1-1绘制基础.md
@@ -15,7 +15,7 @@
 这类方法通常是 用于绘制之前****设置底色****，或者在绘制之后****设置半透明蒙版****
 
 
-- Android 坐标系，左上角为圆点，x轴往右为正，y轴往下为正
+- Android 坐标系，左上角为原点，x轴往右为正，y轴往下为正
 
 - Canvas drawPath(Path p ,Paint paint)画自定义图形
 Path 可以描述 直线，二次曲线，三次曲线，圆，椭圆，弧形，矩形，圆角矩形。    
