--- a/view/1.3文字绘制/1-3文字的绘制.md
+++ b/view/1.3文字绘制/1-3文字的绘制.md
@@ -41,7 +41,7 @@ Paint对文字绘制的辅助主要有俩类：设置显示效果和测量文字
 
 #### 2.1.2 setTypeFace(Typeface typeface)
 设置字体  
->严格地说，其实 typeface 和 font 意思不完全一样。typeface 指的是某套字体（即 font family ），而 font 指的是一个 typeface 具体的某个 weight 和 size 的分支。不过无所谓啦~做人最紧要系开心啦。
+>严格地说，其实 typeface 和 font 意思不完全一样。typeface 指的是某套字体（即 font family ），而 font 指的是一个 typeface 具体的某个 weight 和 size 的分支。
 
 #### 2.1.3 setFakeBoldText(boolean fakeBoldText)
 是否使用伪粗体  
