add content of Region

--- a/view/1.1绘制基础/1-1绘制基础.md
+++ b/view/1.1绘制基础/1-1绘制基础.md
@@ -111,7 +111,7 @@ Path有俩大类方法
 
 #### 1.3.1 贝塞尔曲线  
 
-#### 1.3.1.1 原理  
+##### 1.3.1.1 原理  
 贝塞尔曲线是用一系列点来控制曲线状态的。  
 
 >点可以分为俩类：  **数据点**（确定曲线的起始和结束位置）和**控制点**(确定曲线的弯曲程度)
@@ -133,7 +133,7 @@ Path有俩大类方法
 ![](http://ww1.sinaimg.cn/large/6ab93b35gy1fimj8tfc91j208c0dwdg2.jpg)
 
 
-#### 1.3.1.2 相关函数  
+##### 1.3.1.2 相关函数  
 path.quadTo   path.cubicTo  
 
 对于高阶的曲线，用低阶的曲线组合也可以达到相同的效果，就是降阶 。  
@@ -141,7 +141,7 @@ path.quadTo   path.cubicTo
 - 降阶（保持曲线形状和方向不变的情况下，减少控制点数量）  
 - 升阶 （保持曲线形状和方向不变的情况下，增加控制点数量）
 
-#### 1.3.1.3 通过贝塞尔曲线画圆
+##### 1.3.1.3 通过贝塞尔曲线画圆
 
 P_0 = (0,1), P_1 = (c,1), P_2 = (1,c), P_3 = (1,0)  
 P_0 = (1,0), P_1 = (1,-c), P_2 = (c,-1), P_3 = (0,-1)  
@@ -150,7 +150,7 @@ P_0 = (-1,0), P_1 = (-1,c), P_2 = (-c,1), P_3 = (0,1)
 with c = 0.551915024494f
 
 
-### 1.3.2 PathMeasure  
+#### 1.3.2 PathMeasure  
 一个用来测量Path的类  
 
 ![](http://ww1.sinaimg.cn/large/6ab93b35gy1finpshv8v9j20gk0hpjrq.jpg)
@@ -188,6 +188,24 @@ with c = 0.551915024494f
 
 
 ![](http://ww1.sinaimg.cn/large/6ab93b35gy1fild913bo2j20gi0imt9b.jpg)
+
+### 1.4 Region
+
+- 利用setPath()构造不规则区域
+	>Path path：用来构造的区域的路径
+	Region clip：与前面的path所构成的路径取交集，并将两交集设置为最终的区域
+
+- 矩形集枚举区域-RegionIterator类
+	由于在Canvas中没有直接绘制Region的函数，我们想要绘制一个区域，就只能通过利用RegionIterator构造矩形集来逼近的显示区域
+
+	>RegionIterator(Region region) //根据区域构建对应的矩形集
+	boolean	next(Rect r) //获取下一个矩形，结果保存在参数Rect r 中
+
+- 区域的合并,交叉等操作
+	利用.op() 进行具体的操作
+
+
+#### 1.4.1
 
 
 ## 2.Paint完全攻略
