--- a/view/1.1绘制基础/1-1绘制基础.md
+++ b/view/1.1绘制基础/1-1绘制基础.md
@@ -1,6 +1,6 @@
 # 自定义绘制四个级别
 ---
-## 1.Canvas的drawXXX()系列方法以及paint最常用法
+## 1.Canvas的drawXXX()系列方法以及paint,Path,Region最常用法
 ### 1.1 注意
 - onDraw方法通常会重复调用，所以尽量避免在这个方法中做一些创建对象的操作
 
@@ -205,7 +205,6 @@ with c = 0.551915024494f
 	利用.op() 进行具体的操作
 
 
-#### 1.4.1
 
 
 ## 2.Paint完全攻略
