--- a/设计模式学习笔记/设计模式学习笔记.md
+++ b/设计模式学习笔记/设计模式学习笔记.md
@@ -6,6 +6,7 @@
 * [2-结构型模式](#2-结构型模式)
 * [3-行为型模式](#3-行为型模式)
 
+[桥接模式](#桥接模式)
 
 # 1-创建型模式
 创建型模式(`Creational Pattern`)对类的实例化过程进行了抽象，能够将软件模块中对象的创建和对象的使用分离。为了使软件的结构更加清晰，外界对于这些对象只需要知道它们共同的接口，而不清楚其具体的实现细节，使整个系统的设计更加符合单一职责原则。
@@ -853,6 +854,7 @@ Builder类：
 
 - 适配器模式适用情况包括：系统需要使用现有的类，而这些类的接口不符合系统的需要；想要建立一个可以重复使用的类，用于与一些彼此之间没有太大关联的一些类一起工作。
 
+<span id = "桥接模式"></span>
 ## 2.2 桥接模式(Bridge)3
 ### 2.2.1 模式动机
 设想如果要绘制矩形、圆形、椭圆、正方形，我们至少需要4个形状类，但是如果绘制的图形需要具有不同的颜色，如红色、绿色、蓝色等，此时至少有如下两种设计方案：
