--- a/设计模式学习笔记/设计模式学习笔记.md
+++ b/设计模式学习笔记/设计模式学习笔记.md
@@ -2,15 +2,37 @@
 [UML类图和时序图](http://design-patterns.readthedocs.io/zh_CN/latest/read_uml.html#id1)
 [UML-wiki 统一建模语言](https://zh.wikipedia.org/wiki/%E7%BB%9F%E4%B8%80%E5%BB%BA%E6%A8%A1%E8%AF%AD%E8%A8%80)
 
-* [1-创建型模式](#1-创建型模式)
-* [2-结构型模式](#2-结构型模式)
-* [3-行为型模式](#3-行为型模式)
+# 目录
 
-# 1-创建型模式
+* [1 创建型模式](#1)
+	* [1.1简单工厂模式](#11)
+	* [1.2工厂方法模式](#12)
+	* [1.3抽象工厂模式](#13)
+	* [1.4建造者模式](#14)
+	* [1.5单例模式](#15)
+
+* [2 结构型模式](#2)
+	* [2.1 适配器模式](#21)
+	* [2.2 桥接模式](#22)
+	* [2.3 装饰模式](#23)
+	* [2.4 外观模式](#24)
+	* [2.5 享元模式](#25)
+	* [2.6 代理模式](#26)
+* [3 行为型模式](#3)
+	* [3.1 命令模式](#31)
+	* [3.2 中介者模式](#32)
+	* [3.3 观察者模式](#33)
+	* [3.4 状态模式](#34)
+	* [3.5 策略模式](#35)
+
+
+<span id="1"></span>
+# 1 创建型模式
 创建型模式(`Creational Pattern`)对类的实例化过程进行了抽象，能够将软件模块中对象的创建和对象的使用分离。为了使软件的结构更加清晰，外界对于这些对象只需要知道它们共同的接口，而不清楚其具体的实现细节，使整个系统的设计更加符合单一职责原则。
 
 创建型模式在创建什么(What)，由谁创建(Who)，何时创建(When)等方面都为软件设计者提供了尽可能大的灵活性。创建型模式隐藏了类的实例的创建细节，通过隐藏对象如何被创建和组合在一起达到使整个系统独立的目的。
 
+<span id="11"></span>
 ## 1.1 简单工厂模式（Simple Factory）4
 ### 1.1.1 模型动机
 考虑一个简单的软件应用场景，一个软件系统可以提供多个外观不同的按钮（如圆形按钮、矩形按钮、菱形按钮等）， 这些按钮都源自同一个基类，不过在继承基类后不同的子类修改了部分属性从而使得它们可以呈现不同的外观，**如果我们希望在使用这些按钮时，不需要知道这些具体按钮类的名字，只需要知道表示该按钮类的一个参数，并提供一个调用方便的方法，把该参数传入方法即可返回一个相应的按钮对象，此时，就可以使用简单工厂模式。**
@@ -138,6 +160,7 @@
 
 - 简单工厂模式适用情况包括：工厂类负责创建的对象比较少；客户端只知道传入工厂类的参数，对于如何创建对象不关心。
 
+<span id="12"></span>
 ## 1.2 工厂方法模式（Factory Method）5
 ### 1.2.1 模式动机
 现在对该系统进行修改，不再设计一个按钮工厂类来统一负责所有产品的创建，而是将具体按钮的创建过程交给专门的工厂子类去完成，我们先定义一个抽象的按钮工厂类，再定义具体的工厂类来生成圆形按钮、矩形按钮、菱形按钮等，它们实现在抽象按钮工厂类中定义的方法。这种抽象化的结果使这种结构可以在不修改具体工厂类的情况下引进新的产品，如果出现新的按钮类型，只需要为这种新类型的按钮创建一个具体的工厂类就可以获得该新按钮的实例，这一特点无疑使得工厂方法模式具有超越简单工厂模式的优越性，更加符合“开闭原则”。
@@ -245,6 +268,9 @@
 - 工厂方法模式的主要优点是增加新的产品类时无须修改现有系统，并封装了产品对象的创建细节，系统具有良好的灵活性和可扩展性；其缺点在于增加新产品的同时需要增加新的工厂，导致系统类的个数成对增加，在一定程度上增加了系统的复杂性。
 
 - 工厂方法模式适用情况包括：一个类不知道它所需要的对象的类；一个类通过其子类来指定创建哪个对象；将创建对象的任务委托给多个工厂子类中的某一个，客户端在使用时可以无须关心是哪一个工厂子类创建产品子类，需要时再动态指定。
+
+
+<span id="13"></span>
 ## 1.3 抽象工厂模式（Abstract Factory）5
 ### 1.3.1 模式动机
 - 在工厂方法模式中具体工厂负责生产具体的产品，每一个具体工厂对应一种具体产品，工厂方法也具有唯一性，一般情况下，一个具体工厂中只有一个工厂方法或者一组重载的工厂方法。但是有时候我们需要一个工厂可以提供多个产品对象，而不是单一的产品对象。
@@ -416,6 +442,7 @@
 
 - 抽象工厂模式适用情况包括：一个系统不应当依赖于产品类实例如何被创建、组合和表达的细节；系统中有多于一个的产品族，而每次只使用其中某一产品族；属于同一个产品族的产品将在一起使用；系统提供一个产品类的库，所有的产品以同样的接口出现，从而使客户端不依赖于具体实现。
 
+<span id="14"></span>
 ## 1.4 建造者模式（Builder）2
 ### 1.4.1 模式动机
 无论是在现实世界中还是在软件系统中，都存在一些复杂的对象，它们拥有多个组成部分，如汽车，它包括车轮、方向盘、发送机等各种部件。而对于大多数用户而言，无须知道这些部件的装配细节，也几乎不会使用单独某个部件，而是使用一辆完整的汽车，可以通过建造者模式对其进行设计与描述，建造者模式可以将部件和其组装过程分开，一步一步创建一个复杂的对象。用户只需要指定复杂对象的类型就可以得到该对象，而无须知道其内部的具体构造细节。
@@ -601,6 +628,7 @@ Builder类：
 
 - 建造者模式适用情况包括：需要生成的产品对象有复杂的内部结构，这些产品对象通常包含多个成员属性；需要生成的产品对象的属性相互依赖，需要指定其生成顺序；对象的创建过程独立于创建该对象的类；隔离复杂对象的创建和使用，并使得相同的创建过程可以创建不同类型的产品。
 
+<span id="15"></span>
 ## 1.5 单例模式（Singleton）4
 ### 1.5.1 模式动机
 对于系统中的某些类来说，只有一个实例很重要，例如，一个系统中可以存在多个打印任务，但是只能有一个正在工作的任务；一个系统只能有一个窗口管理器或文件系统；一个系统只能有一个计时工具或ID（序号）生成器。
@@ -698,7 +726,9 @@ Builder类：
 
 
 ---
-# 2-结构型模式
+
+<span id="2"></span>
+# 2 结构型模式
 结构型模式(`Structural Pattern`)描述如何将类或者对 象结合在一起形成更大的结构，就像搭积木，可以通过 简单积木的组合形成复杂的、功能更为强大的结构。
 
 结构型模式可以分为**类结构型模式和对象结构型模式**：
@@ -707,6 +737,8 @@ Builder类：
 
 - **对象结构型模式**关心类与对象的组合，通过关联关系使得在一个类中定义另一个类的实例对象，然后通过该对象调用其方法。 根据“合成复用原则”，在系统中尽量使用关联关系来替代继承关系，因此大部分结构型模式都是对象结构型模式。
 
+
+<span id="21"></span>
 ## 2.1 适配器模式(Adapter)4
 ### 2.1.1 模式动机
 
@@ -852,6 +884,7 @@ Builder类：
 
 - 适配器模式适用情况包括：系统需要使用现有的类，而这些类的接口不符合系统的需要；想要建立一个可以重复使用的类，用于与一些彼此之间没有太大关联的一些类一起工作。
 
+<span id="22"></span>
 ## 2.2 桥接模式(Bridge)3
 ### 2.2.1 模式动机
 设想如果要绘制矩形、圆形、椭圆、正方形，我们至少需要4个形状类，但是如果绘制的图形需要具有不同的颜色，如红色、绿色、蓝色等，此时至少有如下两种设计方案：
@@ -860,7 +893,7 @@ Builder类：
 
 - 第二种设计方案是根据实际需要对形状和颜色进行组合
 
-对于有两个变化维度（即两个变化的原因）的系统，采用方案二来进行设计系统中类的个数更少，且系统扩展更为方便。设计方案二即是桥接模式的应用。桥接模式将继承关系转换为关联关系，从而降低了类与类之间的耦合，减少了代码编写量。
+**对于有两个变化维度（即两个变化的原因）的系统，采用方案二来进行设计系统中类的个数更少，且系统扩展更为方便。设计方案二即是桥接模式的应用。桥接模式将继承关系转换为关联关系，从而降低了类与类之间的耦合，减少了代码编写量。**
 
 ### 2.2.2 模式定义
 桥接模式(`Bridge Pattern`)：**将抽象部分与它的实现部分分离，使它们都可以独立地变化**。它是一种对象结构型模式，又称为柄体(`Handle and Body`)模式或接口(`Interface`)模式。
@@ -983,7 +1016,7 @@ Builder类：
 
 ### 2.2.11 模式应用
 ### 2.2.12 模式扩展
-适配器模式与桥接模式的联用:
+**适配器模式与桥接模式的联用:**
 
 - 桥接模式和适配器模式用于设计的不同阶段，桥接模式用于系统的初步设计，对于存在两个独立变化维度的类可以将其分为抽象化和实现化两个角色，使它们可以分别进行变化；而在初步设计完成之后，当发现系统与已有类无法协同工作时，可以采用适配器模式。但有时候在设计初期也需要考虑适配器模式，特别是那些涉及到大量第三方应用接口的情况。
 
@@ -998,13 +1031,15 @@ Builder类：
 - 桥接模式的主要优点是分离抽象接口及其实现部分，是比多继承方案更好的解决方法，桥接模式还提高了系统的可扩充性，在两个变化维度中任意扩展一个维度，都不需要修改原有系统，实现细节对客户透明，可以对用户隐藏实现细节；其主要缺点是增加系统的理解与设计难度，且识别出系统中两个独立变化的维度并不是一件容易的事情。
 
 - 桥接模式适用情况包括：需要在构件的抽象化角色和具体化角色之间增加更多的灵活性，避免在两个层次之间建立静态的继承联系；抽象化角色和实现化角色可以以继承的方式独立扩展而互不影响；一个类存在两个独立变化的维度，且这两个维度都需要进行扩展；设计要求需要独立管理抽象化角色和具体化角色；不希望使用继承或因为多层次继承导致系统类的个数急剧增加的系统。
+
+<span id="23"></span>
 ## 2.3 装饰模式(Decorator)3
 ### 2.3.1 模式动机
 一般有两种方式可以实现给一个类或对象增加行为：
 
 - 继承机制，使用继承机制是给现有类添加功能的一种有效途径，通过继承一个现有类可以使得子类在拥有自身方法的同时还拥有父类的方法。但是这种方法是静态的，用户不能控制增加行为的方式和时机。
 
-- 关联机制，即将一个类的对象嵌入另一个对象中，由另一个对象来决定是否调用嵌入对象的行为以便扩展自己的行为，我们称这个嵌入的对象为装饰器(Decorator)
+- 关联机制，即将一个类的对象嵌入另一个对象中，由另一个对象来决定是否调用嵌入对象的行为以便扩展自己的行为，便称这个嵌入的对象为装饰器(Decorator)
 
 装饰模式以对客户透明的方式动态地给一个对象附加上更多的责任，换言之，客户端并不会觉得对象在装饰前和装饰后有什么不同。装饰模式可以在不需要创造更多子类的情况下，将对象的功能加以扩展。这就是装饰模式的模式动机。
 
@@ -1145,52 +1180,630 @@ Builder类：
 
 - 装饰模式可分为透明装饰模式和半透明装饰模式：在透明装饰模式中，要求客 户端完全针对抽象编程，装饰模式的透明性要求客户端程序不应该声明具体构 件类型和具体装饰类型，而应该全部声明为抽象构件类型；半透明装饰模式允 许用户在客户端声明具体装饰者类型的对象，调用在具体装饰者中新增的方法。
 
-
+<span id="24"></span>
 ## 2.4 外观模式(Facade)5
 ### 2.4.1 模式动机
+通过一个外观类使得整个系统的接口只有一个统一的高层接口，这样能够降低用户的使用成本，也对用户屏蔽了很多实现细节。
 ### 2.4.2 模式定义
+外观模式(`Facade Pattern`)：外部与一个子系统的通信必须通过一个统一的外观对象进行，为子系统中的一组接口提供一个一致的界面，外观模式定义了一个高层接口，这个接口使得这一子系统更加容易使用。外观模式又称为门面模式，它是一种**对象结构型模式**。
+
 ### 2.4.3 模式结构
+
+外观模式包含如下角色：
+
+- Facade: 外观角色
+
+	系统对外的统一接口，系统内部系统地工作
+
+- SubSystem:子系统角色
+
+	子系统接口，具体功能使用所在的地方
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/Facade.jpg)
+
 ### 2.4.4 时序图
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/seq_Facade.jpg)
 ### 2.4.5 代码分析
+	
+	public class SubSystemB {
+	
+	    public void doSomething() {
+	
+	    }
+	}
+	
+	public class SubSystemA {
+	    public void showSomething() {
+	
+	    }
+	}
+	
+	public class Facade {
+	    private SubSystemA mSubSystemA = new SubSystemA();
+	    private SubSystemB mSubSystemB = new SubSystemB();
+	
+	    public void callSystemA() {
+	        mSubSystemA.showSomething();
+	    }
+	
+	    public void callSystemB() {
+	        mSubSystemB.doSomething();
+	    }
+	}
+
 ### 2.4.6 模式分析
+
+根据“单一职责原则”，在软件中将一个系统划分为若干个子系统有利于降低整个系统的复杂性，一个常见的设计目标是使子系统间的通信和相互依赖关系达到最小，而达到该目标的途径之一就是引入一个外观对象，它为子系统的访问提供了一个简单而单一的入口。 
+
+-外观模式也是“迪米特法则”的体现，通过引入一个新的外观类可以降低原有系统的复杂度，同时降低客户类与子系统类的耦合度。 
+
+- 外观模式要求一个子系统的外部与其内部的通信通过一个统一的外观对象进行，外观类将客户端与子系统的内部复杂性分隔开，使得客户端只需要与外观对象打交道，而不需要与子系统内部的很多对象打交道。 
+
+-外观模式的目的在于降低系统的复杂程度。 
+
+-外观模式从很大程度上提高了客户端使用的便捷性，使得客户端无须关心子系统的工作细节，通过外观角色即可调用相关功能。
+
 ### 2.4.7 实例
 ### 2.4.8 优点
+
+- 对客户屏蔽子系统组件，减少了客户处理的对象数目并使得子系统使用起来更加容易。通过引入外观模式，客户代码将变得很简单，与之关联的对象也很少。
+
+- 实现了子系统与客户之间的松耦合关系，这使得子系统的组件变化不会影响到调用它的客户类，只需要调整外观类即可。
+
+- 降低了大型软件系统中的编译依赖性，并简化了系统在不同平台之间的移植过程，因为编译一个子系统一般不需要编译所有其他的子系统。一个子系统的修改对其他子系统没有任何影响，而且子系统内部变化也不会影响到外观对象。
+
+- 只是提供了一个访问子系统的统一入口，并不影响用户直接使用子系统类。
+
 ### 2.4.9 缺点
+
+- 不能很好地限制客户使用子系统类，如果对客户访问子系统类做太多的限制则减少了可变性和灵活性。
+
+- 在不引入抽象外观类的情况下，增加新的子系统可能需要修改外观类或客户端的源代码，违背了“开闭原则”。
+
 ### 2.4.10 适用环境
+
+- 当要为一个复杂子系统提供一个简单接口时可以使用外观模式。该接口可以满足大多数用户的需求，而且用户也可以越过外观类直接访问子系统。
+
+- 客户程序与多个子系统之间存在很大的依赖性。引入外观类将子系统与客户以及其他子系统解耦，可以提高子系统的独立性和可移植性。
+
+- 在层次化结构中，可以使用外观模式定义系统中每一层的入口，层与层之间不直接产生联系，而通过外观类建立联系，降低层之间的耦合度。
 ### 2.4.11 模式应用
 ### 2.4.12 模式扩展
+
+- 一个系统有多个外观类
+
+	在外观模式中，通常只需要一个外观类，并且此外观类只有一个实例，换言之它是一个单例类。在很多情况下为了节约系统资源，一般将外观类设计为单例类。当然这并不意味着在整个系统里只能有一个外观类，在一个系统中可以设计多个外观类，每个外观类都负责和一些特定的子系统交互，向用户提供相应的业务功能。
+
+- 不要试图通过外观类为子系统增加新行为
+
+	不要通过继承一个外观类在子系统中加入新的行为，这种做法是错误的。外观模式的用意是为子系统提供一个集中化和简化的沟通渠道，而不是向子系统加入新的行为，新的行为的增加应该通过修改原有子系统类或增加新的子系统类来实现，不能通过外观类来实现。
+
+- 外观模式与迪米特法则
+
+	外观模式创造出一个外观对象，将客户端所涉及的属于一个子系统的协作伙伴的数量减到最少，使得客户端与子系统内部的对象的相互作用被外观对象所取代。外观类充当了客户类与子系统类之间的“第三者”，降低了客户类与子系统类之间的耦合度，外观模式就是实现代码重构以便达到“迪米特法则”要求的一个强有力的武器。
+
+- 抽象外观类的引入
+
+	外观模式最大的缺点在于违背了“开闭原则”，当增加新的子系统或者移除子系统时需要修改外观类，可以通过引入抽象外观类在一定程度上解决该问题，客户端针对抽象外观类进行编程。对于新的业务需求，不修改原有外观类，而对应增加一个新的具体外观类，由新的具体外观类来关联新的子系统对象，同时通过修改配置文件来达到不修改源代码并更换外观类的目的。
+
 ### 2.4.13 总结
-## 2.5 代理模式(Proxy)4
+- 在外观模式中，外部与一个子系统的通信必须通过一个统一的外观对象进行，为子系统中的一组接口提供一个一致的界面，外观模式定义了一个高层接口，这个接口使得这一子系统更加容易使用。外观模式又称为门面模式，它是一种对象结构型模式。
+
+- 外观模式包含两个角色：外观角色是在客户端直接调用的角色，在外观角色中可以知道相关的(一个或者多个)子系统的功能和责任，它将所有从客户端发来的请求委派到相应的子系统去，传递给相应的子系统对象处理；在软件系统中可以同时有一个或者多个子系统角色，每一个子系统可以不是一个单独的类，而是一个类的集合，它实现子系统的功能。
+
+- 外观模式要求一个子系统的外部与其内部的通信通过一个统一的外观对象进行，外观类将客户端与子系统的内部复杂性分隔开，使得客户端只需要与外观对象打交道，而不需要与子系统内部的很多对象打交道。
+
+- 外观模式主要优点在于对客户屏蔽子系统组件，减少了客户处理的对象数目并使得子系统使用起来更加容易，它实现了子系统与客户之间的松耦合关系，并降低了大型软件系统中的编译依赖性，简化了系统在不同平台之间的移植过程；其缺点在于不能很好地限制客户使用子系统类，而且在不引入抽象外观类的情况下，增加新的子系统可能需要修改外观类或客户端的源代码，违背了“开闭原则”。
+
+- 外观模式适用情况包括：要为一个复杂子系统提供一个简单接口；客户程序与多个子系统之间存在很大的依赖性；在层次化结构中，需要定义系统中每一层的入口，使得层与层之间不直接产生联系。
+
+<span id="25"></span>
+## 2.5 享元模式(Flyweight)1
 ### 2.5.1 模式动机
+
+面向对象技术可以很好地解决一些灵活性或可扩展性问题，但在很多情况下需要在系统中增加类和对象的个数。当对象数量太多时，将导致运行代价过高，带来性能下降等问题。
+
+- 享元模式正是为解决这一类问题而诞生的。享元模式通过共享技术实现相同或相似对象的重用。
+
+- 在享元模式中可以共享的相同内容称为内部状态(`IntrinsicState`)，而那些需要外部环境来设置的不能共享的内容称为外部状态(`Extrinsic State`)，由于区分了内部状态和外部状态，因此可以通过设置不同的外部状态使得相同的对象可以具有一些不同的特征，而相同的内部状态是可以共享的。
+
+- 在享元模式中通常会出现工厂模式，需要创建一个享元工厂来负责维护一个享元池(`Flyweight Pool`)用于存储具有相同内部状态的享元对象。
+
+- 在享元模式中共享的是享元对象的内部状态，外部状态需要通过环境来设置。在实际使用中，能够共享的内部状态是有限的，**因此享元对象一般都设计为较小的对象，它所包含的内部状态较少，这种对象也称为细粒度对象**。
+
+- 享元模式的目的就是使用共享技术来实现大量细粒度对象的复用。
+
 ### 2.5.2 模式定义
+
+享元模式(`Flyweight Pattern`)：运用共享技术有效地支持大量细粒度对象的复用。系统只使用少量的对象，而这些对象都很相似，状态变化很小，可以实现对象的多次复用。由于享元模式要求能够共享的对象必须是细粒度对象，因此它又称为轻量级模式，它是一种对象结构型模式。
+
+
 ### 2.5.3 模式结构
+
+享元模式包含如下角色：
+
+- Flyweight: 抽象享元类
+
+	享元对象抽象基类或者接口
+
+- ConcreteFlyweight: 具体享元类
+
+	具体的逻辑实现
+
+- UnsharedConcreteFlyweight: 非共享具体享元类
+
+- FlyweightFactory: 享元工厂类
+
+	负责管理享元对象池和创建享元对象
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/Flyweight.jpg)
+
 ### 2.5.4 时序图
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/seq_Flyweight.jpg)
 ### 2.5.5 代码分析
+
+	public interface Flyweight {
+	    void doSomeThing(String paramC);
+	}
+	
+	public class ConcreateFlyweight implements Flyweight {
+	
+	    String paramA;
+	    String paramB;
+	    String paramC;
+	
+	    public ConcreateFlyweight(String paramA) {
+	        this.paramA = paramA;
+	    }
+	
+	    @Override
+	    public void doSomeThing(String paramC) {
+	        Log.d("ConcreateFlyweight", paramA + paramB + paramC);
+	    }
+	}
+	
+	public class FlyweightFactory {
+	    private static HashMap<String, Flyweight> mMap = new HashMap<>();
+	
+	    public static Flyweight getFlyweight(String paramA, String paramB) {
+	        String key = paramA + "-" + paramB;
+	
+	        if (mMap.containsKey(key)) {
+	            return mMap.get(key);
+	        } else {
+	            Flyweight flyweight = new ConcreateFlyweight(paramA);
+	            mMap.put(key, flyweight);
+	            return flyweight;
+	        }
+	    }
+	}
+
 ### 2.5.6 模式分析
+
+享元模式是一个考虑系统性能的设计模式，通过使用享元模式可以节约内存空间，提高系统的性能。
+
+享元模式的核心在于享元工厂类，享元工厂类的作用在于提供一个用于存储享元对象的享元池，用户需要对象时，首先从享元池中获取，如果享元池中不存在，则创建一个新的享元对象返回给用户，并在享元池中保存该新增对象。
+
+享元模式以共享的方式高效地支持大量的细粒度对象，**享元对象能做到共享的关键是区分内部状态(`Internal State`)和外部状态(`External State`)。**
+
+- 内部状态是存储在享元对象内部并且不会随环境改变而改变的状态，因此内部状态可以共享。
+
+- 外部状态是随环境改变而改变的、不可以共享的状态。享元对象的外部状态必须由客户端保存，并在享元对象被创建之后，在需要使用的时候再传入到享元对象内部。一个外部状态与另一个外部状态之间是相互独立的。
+
+
 ### 2.5.7 实例
 ### 2.5.8 优点
+
+- 享元模式的优点在于它可以极大减少内存中对象的数量，使得相同对象或相似对象在内存中只保存一份。
+
+- 享元模式的外部状态相对独立，而且不会影响其内部状态，从而使得享元对象可以在不同的环境中被共享。
+
 ### 2.5.9 缺点
+
+- 享元模式使得系统更加复杂，需要分离出内部状态和外部状态，这使得程序的逻辑复杂化。
+
+- 为了使对象可以共享，享元模式需要将享元对象的状态外部化，而读取外部状态使得运行时间变长。
+
 ### 2.5.10 适用环境
+
+- 一个系统有大量相同或者相似的对象，由于这类对象的大量使用，造成内存的大量耗费。
+
+- 对象的大部分状态都可以外部化，可以将这些外部状态传入对象中。
+
+- 使用享元模式需要维护一个存储享元对象的享元池，而这需要耗费资源，因此，应当在多次重复使用享元对象时才值得使用享元模式。
+
 ### 2.5.11 模式应用
 ### 2.5.12 模式扩展
+
+**单纯享元模式和复合享元模式**
+
+- 单纯享元模式：在单纯享元模式中，所有的享元对象都是可以共享的，即所有抽象享元类的子类都可共享，不存在非共享具体享元类。
+
+- 复合享元模式：将一些单纯享元使用组合模式加以组合，可以形成复合享元对象，这样的复合享元对象本身不能共享，但是它们可以分解成单纯享元对象，而后者则可以共享。
+
+**享元模式与其他模式的联用**
+
+- 在享元模式的享元工厂类中通常提供一个静态的工厂方法用于返回享元对象，使用简单工厂模式来生成享元对象。
+
+- 在一个系统中，通常只有唯一一个享元工厂，因此享元工厂类可以使用单例模式进行设计。
+
+- 享元模式可以结合组合模式形成复合享元模式，统一对享元对象设置外部状态。
+
 ### 2.5.13 总结
+
+- 享元模式运用共享技术有效地支持大量细粒度对象的复用。系统只使用少量的对象，而这些对象都很相似，状态变化很小，可以实现对象的多次复用，它是一种对象结构型模式。
+
+- 享元模式包含四个角色：抽象享元类声明一个接口，通过它可以接受并作用于外部状态；具体享元类实现了抽象享元接口，其实例称为享元对象；非共享具体享元是不能被共享的抽象享元类的子类；享元工厂类用于创建并管理享元对象，它针对抽象享元类编程，将各种类型的具体享元对象存储在一个享元池中。
+
+- 享元模式以共享的方式高效地支持大量的细粒度对象，享元对象能做到共享的关键是区分内部状态和外部状态。其中内部状态是存储在享元对象内部并且不会随环境改变而改变的状态，因此内部状态可以共享；外部状态是随环境改变而改变的、不可以共享的状态。
+
+- 享元模式主要优点在于它可以极大减少内存中对象的数量，使得相同对象或相似对象在内存中只保存一份；其缺点是使得系统更加复杂，并且需要将享元对象的状态外部化，而读取外部状态使得运行时间变长。
+
+- 享元模式适用情况包括：一个系统有大量相同或者相似的对象，由于这类对象的大量使用，造成内存的大量耗费；对象的大部分状态都可以外部化，可以将这些外部状态传入对象中；多次重复使用享元对象。
+
+
+<span id="26"></span>
 ## 2.6 代理模式(Proxy)4
 ### 2.6.1 模式动机
+
+在某些情况下，一个客户不想或者不能直接引用一个对象，此时可以通过一个称之为“代理”的第三者来实现 间接引用。代理对象可以在客户端和目标对象之间起到 中介的作用，并且可以通过代理对象去掉客户不能看到的内容和服务或者添加客户需要的额外服务。
+
+通过引入一个新的对象（如小图片和远程代理 对象）来实现对真实对象的操作或者将新的对象作为真实对象的一个替身，这种实现机制即 为代理模式，通过引入代理对象来间接访问一 个对象，这就是代理模式的模式动机。
+
 ### 2.6.2 模式定义
+
+代理模式(`Proxy Pattern`) ：给某一个对象提供一个代 理，并由代理对象控制对原对象的引用。代理模式的英 文叫做Proxy或Surrogate，它是一种对象结构型模式。
+
 ### 2.6.3 模式结构
+
+代理模式包含如下角色：
+
+- Subject: 抽象主题角色
+
+	主要职责是声明真实主题与代理的共同接口方法，该类既可以是一个抽象类也可以是一个接口
+
+- Proxy: 代理主题角色
+
+	也被称为委托类或代理类，该类持有一个 真实主题角色的引用，在其所实现的接口方法中调用真实主题类中相应的接口方法即可，以此起到代理的作用
+
+- RealSubject: 真实主题角色
+
+	也被称为被委托类或被代理类，该类定义了代理所表示的真实对象，由其执行具体的业务逻辑方法，而客户类 则通过代理类间接的调用真实主题类中定义的方法
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/Proxy.jpg)
+
 ### 2.6.4 时序图
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/seq_Proxy.jpg)
+
 ### 2.6.5 代码分析
+
+	public interface Subject {
+	    void request();
+	}
+	
+	public class RealSubject implements Subject {
+	    @Override
+	    public void request() {
+	        Log.d("RealSubject", "do something");
+	    }
+	}
+	
+	public class Proxy implements Subject {
+	
+	    static Subject mSubject;
+	
+	    public Proxy(Subject subject) {
+	        mSubject = subject;
+	    }
+	
+	    void beforeRequest() {
+	
+	    }
+	
+	    void afterRequest() {
+	
+	    }
+	
+	    @Override
+	    public void request() {
+	        beforeRequest();
+	        mSubject.request();
+	        afterRequest();
+	    }
+	}
+
 ### 2.6.6 模式分析
 ### 2.6.7 实例
 ### 2.6.8 优点
+
+- 代理模式能够协调调用者和被调用者，在一定程度上降低了系 统的耦合度。
+
+- 远程代理使得客户端可以访问在远程机器上的对象，远程机器 可能具有更好的计算性能与处理速度，可以快速响应并处理客户端请求。
+
+- 虚拟代理通过使用一个小对象来代表一个大对象，可以减少系 统资源的消耗，对系统进行优化并提高运行速度。
+
+- 保护代理可以控制对真实对象的使用权限。
+
 ### 2.6.9 缺点
+
+- 由于在客户端和真实主题之间增加了代理对象，因此 有些类型的代理模式可能会造成请求的处理速度变慢。
+
+- 实现代理模式需要额外的工作，有些代理模式的实现 非常复杂。
+
 ### 2.6.10 适用环境
+**根据代理模式的使用目的，常见的代理模式有以下几种类型：**
+
+- 远程(Remote)代理：为一个位于不同的地址空间的对象提供一个本地 的代理对象，这个不同的地址空间可以是在同一台主机中，也可是在 另一台主机中，远程代理又叫做大使(Ambassador)。
+
+- 虚拟(Virtual)代理：如果需要创建一个资源消耗较大的对象，先创建一个消耗相对较小的对象来表示，真实对象只在需要时才会被真正创建。
+
+- Copy-on-Write代理：它是虚拟代理的一种，把复制（克隆）操作延迟 到只有在客户端真正需要时才执行。一般来说，对象的深克隆是一个 开销较大的操作，Copy-on-Write代理可以让这个操作延迟，只有对象被用到的时候才被克隆。
+
+- 保护(Protect or Access)代理：控制对一个对象的访问，可以给不同的用户提供不同级别的使用权限。
+
+- 缓冲(Cache)代理：为某一个目标操作的结果提供临时的存储空间，以便多个客户端可以共享这些结果。
+
+- 防火墙(Firewall)代理：保护目标不让恶意用户接近。
+
+- 同步化(Synchronization)代理：使几个用户能够同时使用一个对象而没有冲突。
+
+- 智能引用(Smart Reference)代理：当一个对象被引用时，提供一些额外的操作，如将此对象被调用的次数记录下来等。
+
 ### 2.6.11 模式应用
 ### 2.6.12 模式扩展
+
+- 图片代理：一个很常见的代理模式的应用实例就是对大图浏览的控制。
+	
+	用户通过浏览器访问网页时先不加载真实的大图，而是通过代理对象的方法来进行处理，在代理对象的方法中，先使用一个线程向客户端浏览器加载一个小图片，然后在后台使用另一个线程来调用大图片的加载方法将大图片加载到客户端。当需要浏览大图片时，再将大图片在新网页中显示。如果用户在浏览大图时加载工作还没有完成，可以再启动一个线程来显示相应的提示信息。通过代理技术结合多线程编程将真实图片的加载放到后台来操作，不影响前台图片的浏览。
+
+- 远程代理：远程代理可以将网络的细节隐藏起来，使得客户端不必考虑网络的存在。客户完全可以认为被代理的远程业务对象是局域的而不是远程的，而远程代理对象承担了大部分的网络通信工作。
+
+- 虚拟代理：当一个对象的加载十分耗费资源的时候，虚拟代理的优势就非常明显地体现出来了。虚拟代理模式是一种内存节省技术，那些占用大量内存或处理复杂的对象将推迟到使用它的时候才创建。
+
+	- 在应用程序启动的时候，可以用代理对象代替真实对象初始化，节省了内存的占用，并大大加速了系统的启动时间。
+
+**动态代理**
+
+- 动态代理是一种较为高级的代理模式，它的典型应用就是Spring AOP。
+
+- 在传统的代理模式中，客户端通过Proxy调用RealSubject类的request()方法，同时还在代理类中封装了其他方法(如preRequest()和postRequest())，可以处理一些其他问题。
+
+- 如果按照这种方法使用代理模式，那么真实主题角色必须是事先已经存在的，并将其作为代理对象的内部成员属性。如果一个真实主题角色必须对应一个代理主题角色，这将导致系统中的类个数急剧增加，因此需要想办法减少系统中类的个数，此外，如何在事先不知道真实主题角色的情况下使用代理主题角色，这都是动态代理需要解决的问题。
+
 ### 2.6.13 总结
-# 3-行为型模式
+
+- 在代理模式中，要求给某一个对象提供一个代理，并由代理对象控制对原对象的引用。代理模式的英文叫做Proxy或Surrogate，它是一种对象结构型模式。 
+
+- 代理模式包含三个角色：抽象主题角色声明了真实主题和代理主题的共同接口；代理主题角色内部包含对真实主题的引用，从而可以在任何时候操作真实主题对象；真实主题角色定义了代理角色所代表的真实对象，在真实主题角色中实现了真实的业务操作，客户端可以通过代理主题角色间接调用真实主题角色中定义的方法。 
+
+- 代理模式的优点在于能够协调调用者和被调用者，在一定程度上降低了系统的耦合度；其缺点在于由于在客户端和真实主题之间增加了代理对象，因此有些类型的代理模式可能会造成请求的处理速度变慢，并且实现代理模式需要额外的工作，有些代理模式的实现非常复杂。远程代理为一个位于不同的地址空间的对象提供一个本地的代表对象，它使得客户端可以访问在远程机器上的对象，远程机器可能具有更好的计算性能与处理速度，可以快速响应并处理客户端请求。
+
+- 如果需要创建一个资源消耗较大的对象，先创建一个消耗相对较小的对象来表示，真实对象只在需要时才会被真正创建，这个小对象称为虚拟代理。虚拟代理通过使用一个小对象来代表一个大对象，可以减少系统资源的消耗，对系统进行优化并提高运行速度。 
+
+- 保护代理可以控制对一个对象的访问，可以给不同的用户提供不同级别的使用权限。
+
+---
+
+<span id="3"></span>
+# 3 行为型模式
+
+行为型模式(`Behavioral Pattern`)是**对在不同的对象之间划分责任和算法的抽象化。**
+
+行为型模式不仅仅关注类和对象的结构，而且**重点关注它们之间的相互作用**。
+
+通过行为型模式，可以更加清晰地划分类与对象的职责，并研究系统在运行时实例对象之间的交互。在系统运行时，对象并不是孤立的，它们可以通过相互通信与协作完成某些复杂功能，一个对象在运行时也将影响到其他对象的运行。
+
+**行为型模式分为类行为型模式和对象行为型模式两种：**
+
+- 类行为型模式：类的行为型模式使用继承关系在几个类之间分配行为，类行为型模式主要通过多态等方式来分配父类与子类的职责。
+
+- 对象行为型模式：对象的行为型模式则使用对象的聚合关联关系来分配行为，对象行为型模式主要是通过对象关联等方式来分配两个或多个类的职责。根据“合成复用原则”，系统中要尽量使用关联关系来取代继承关系，因此大部分行为型设计模式都属于对象行为型设计模式。
+
+<span id="31"></span>
 ## 3.1 命令模式(Command)4
+### 3.1.1 模式动机
+
+在软件设计中，经常需要向某些对象发送请求，但是并不知道请求的接收者是谁，也不知道被请求的操作是哪个，我们只需在程序运行时指定具体的请求接收者即可，此时，可以使用命令模式来进行设计，使得请求发送者与请求接收者消除彼此之间的耦合，让对象之间的调用关系更加灵活。
+
+命令模式可以对发送者和接收者完全解耦，发送者与接收者之间没有直接引用关系，发送请求的对象只需要知道如何发送请求，而不必知道如何完成请求。这就是命令模式的模式动机。
+
+### 3.1.2 模式定义
+
+命令模式(`Command Pattern`)：将一个请求封装为一个对象，从而使我们可用不同的请求对客户进行参数化；对请求排队或者记录请求日志，以及支持可撤销的操作。命令模式是一种对象行为型模式，其别名为动作(`Action`)模式或事务(`Transaction`)模式。
+
+### 3.1.3 模式结构
+命令模式包含如下角色：
+
+- Command: 抽象命令类
+
+	定义所有具体命令类的抽象接口
+
+- ConcreteCommand: 具体命令类
+
+	实现了Command接口，在execute方法中调用接收者角色的相关方法，在接收者和命令执行的具体行为之间加以弱耦合。**execute通常称为执行方法**
+
+- Invoker: 调用者
+	
+	该类的职责就是调用命令对象执行具体的请求，相关的方法称为行动方法。
+
+- Receiver: 接收者
+
+	该类负责具体实施或执行一个请求，简而言之：执行具体逻辑的角色。任何一个类都可以成为一个接收者，而**在接收者类中封装具体操作逻辑的方法则称为行动方法**。
+
+- Client:客户类
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/Command.jpg)
+
+### 3.1.4 时序图
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/seq_Command.jpg)
+### 3.1.5 代码分析
+
+	public class Receiver {
+	    /**
+	     * 真正执行具体命令逻辑的方法
+	     */
+	    public void action() {
+	        //执行具体操作
+	    }
+	}
+	
+	public interface Command {
+	    void execute();
+	}
+	
+	public class ConcreateCommand implements Command {
+	    //持有一个对接收者对象的引用
+	    private Receiver mReceiver;
+	
+	    public ConcreateCommand(Receiver receiver){
+	        mReceiver = receiver;
+	    }
+	
+	    @Override
+	    public void execute() {
+	        //调用接收者的相关方法执行具体逻辑
+	        mReceiver.action();
+	    }
+	}
+	
+	public class Invoker {
+	    //持有一个对相应命令对象的引用
+	    private Command mCommand;
+	
+	    public Invoker(Command command) {
+	        mCommand = command;
+	    }
+	
+	    public void action() {
+	        //调用具体命令对象的相关方法,执行具体命令
+	        mCommand.execute();
+	    }
+	}
+
+	//具体使用
+	Receiver receiver = new Receiver();
+	Command command = new ConcreateCommand(receiver);
+	Invoker invoker = new Invoker(command);
+	invoker.action();
+
+### 3.1.6 模式分析
+
+**命令模式的本质是对命令进行封装，将发出命令的责任和执行命令的责任分割开。**
+
+- 每一个命令都是一个操作：请求的一方发出请求，要求执行一个操作；接收的一方收到请求，并执行操作。
+
+- 命令模式允许请求的一方和接收的一方独立开来，使得请求的一方不必知道接收请求的一方的接口，更不必知道请求是怎么被接收，以及操作是否被执行、何时被执行，以及是怎么被执行的。
+
+- 命令模式使请求本身成为一个对象，这个对象和其他对象一样可以被存储和传递。
+
+- **命令模式的关键在于引入了抽象命令接口，且发送者针对抽象命令接口编程，只有实现了抽象命令接口的具体命令才能与接收者相关联。**
+
+### 3.1.7 实例
+### 3.1.8 优点
+
+- 降低系统的耦合度。
+
+- 新的命令可以很容易地加入到系统中。
+
+- 可以比较容易地设计一个命令队列和宏命令（组合命令）。
+
+- 可以方便地实现对请求的Undo和Redo。
+
+### 3.1.9 缺点
+
+- 使用命令模式可能会导致某些系统有过多的具体命令类。因为针对每一个命令都需要设计一个具体命令类，因此某些系统可能需要大量具体命令类，这将影响命令模式的使用。
+
+### 3.1.10 适用环境
+
+- 系统需要将请求调用者和请求接收者解耦，使得调用者和接收者不直接交互。
+
+- 系统需要在不同的时间指定请求、将请求排队和执行请求。
+
+- 系统需要支持命令的撤销(Undo)操作和恢复(Redo)操作。
+
+- 系统需要将一组操作组合在一起，即支持宏命令
+### 3.1.11 模式应用
+### 3.1.12 模式扩展
+
+宏命令又称为组合命令，它是命令模式和组合模式联用的产物。
+
+- 宏命令也是一个具体命令，不过它包含了对其他命令对象的引用，在调用宏命令的execute()方法时，将递归调用它所包含的每个成员命令的execute()方法，一个宏命令的成员对象可以是简单命令，还可以继续是宏命令。执行一个宏命令将执行多个具体命令，从而实现对命令的批处理。
+
+### 3.1.13 总结
+
+- 在命令模式中，将一个请求封装为一个对象，从而使我们可用不同的请求对客户进行参数化；对请求排队或者记录请求日志，以及支持可撤销的操作。命令模式是一种对象行为型模式，其别名为动作模式或事务模式。
+
+- 命令模式包含四个角色：抽象命令类中声明了用于执行请求的execute()等方法，通过这些方法可以调用请求接收者的相关操作；具体命令类是抽象命令类的子类，实现了在抽象命令类中声明的方法，它对应具体的接收者对象，将接收者对象的动作绑定其中；调用者即请求的发送者，又称为请求者，它通过命令对象来执行请求；接收者执行与请求相关的操作，它具体实现对请求的业务处理。
+
+- 命令模式的本质是对命令进行封装，将发出命令的责任和执行命令的责任分割开。命令模式使请求本身成为一个对象，这个对象和其他对象一样可以被存储和传递。
+
+- 命令模式的主要优点在于降低系统的耦合度，增加新的命令很方便，而且可以比较容易地设计一个命令队列和宏命令，并方便地实现对请求的撤销和恢复；其主要缺点在于可能会导致某些系统有过多的具体命令类。
+
+- 命令模式适用情况包括：需要将请求调用者和请求接收者解耦，使得调用者和接收者不直接交互；需要在不同的时间指定请求、将请求排队和执行请求；需要支持命令的撤销操作和恢复操作，需要将一组操作组合在一起，即支持宏命令。
+
+<span id="32"></span>
 ## 3.2 中介者模式(Mediator)2
+### 3.2.1 模式动机
+### 3.2.2 模式定义
+### 3.2.3 模式结构
+### 3.2.4 时序图
+### 3.2.5 代码分析
+### 3.2.6 模式分析
+### 3.2.7 实例
+### 3.2.8 优点
+### 3.2.9 缺点
+### 3.2.10 适用环境
+### 3.2.11 模式应用
+### 3.2.12 模式扩展
+### 3.2.13 总结
+
+<span id="33"></span>
 ## 3.3 观察者模式(Observer)5
+### 3.3.1 模式动机
+### 3.3.2 模式定义
+### 3.3.3 模式结构
+### 3.3.4 时序图
+### 3.3.5 代码分析
+### 3.3.6 模式分析
+### 3.3.7 实例
+### 3.3.8 优点
+### 3.3.9 缺点
+### 3.3.10 适用环境
+### 3.3.11 模式应用
+### 3.3.12 模式扩展
+### 3.3.13 总结
+
+<span id="34"></span>
 ## 3.4 状态模式(State)3
+### 3.4.1 模式动机
+### 3.4.2 模式定义
+### 3.4.3 模式结构
+### 3.4.4 时序图
+### 3.4.5 代码分析
+### 3.4.6 模式分析
+### 3.4.7 实例
+### 3.4.8 优点
+### 3.4.9 缺点
+### 3.4.10 适用环境
+### 3.4.11 模式应用
+### 3.4.12 模式扩展
+### 3.4.13 总结
+
+<span id="35"></span>
 ## 3.5 策略模式(Strategy)4
+### 3.5.1 模式动机
+### 3.5.2 模式定义
+### 3.5.3 模式结构
+### 3.5.4 时序图
+### 3.5.5 代码分析
+### 3.5.6 模式分析
+### 3.5.7 实例
+### 3.5.8 优点
+### 3.5.9 缺点
+### 3.5.10 适用环境
+### 3.5.11 模式应用
+### 3.5.12 模式扩展
+### 3.5.13 总结
