--- a/设计模式学习笔记/设计模式学习笔记.md
+++ b/设计模式学习笔记/设计模式学习笔记.md
@@ -1234,15 +1234,15 @@ Builder类：
 
 ### 2.4.6 模式分析
 
-根据“单一职责原则”，在软件中将一个系统划分为若干个子系统有利于降低整个系统的复杂性，一个常见的设计目标是使子系统间的通信和相互依赖关系达到最小，而达到该目标的途径之一就是引入一个外观对象，它为子系统的访问提供了一个简单而单一的入口。 
+- 根据“单一职责原则”，在软件中将一个系统划分为若干个子系统有利于降低整个系统的复杂性，一个常见的设计目标是使子系统间的通信和相互依赖关系达到最小，而达到该目标的途径之一就是引入一个外观对象，它为子系统的访问提供了一个简单而单一的入口。 
 
--外观模式也是“迪米特法则”的体现，通过引入一个新的外观类可以降低原有系统的复杂度，同时降低客户类与子系统类的耦合度。 
+- 外观模式也是“迪米特法则”的体现，通过引入一个新的外观类可以降低原有系统的复杂度，同时降低客户类与子系统类的耦合度。 
 
 - 外观模式要求一个子系统的外部与其内部的通信通过一个统一的外观对象进行，外观类将客户端与子系统的内部复杂性分隔开，使得客户端只需要与外观对象打交道，而不需要与子系统内部的很多对象打交道。 
 
--外观模式的目的在于降低系统的复杂程度。 
+- 外观模式的目的在于降低系统的复杂程度。 
 
--外观模式从很大程度上提高了客户端使用的便捷性，使得客户端无须关心子系统的工作细节，通过外观角色即可调用相关功能。
+- 外观模式从很大程度上提高了客户端使用的便捷性，使得客户端无须关心子系统的工作细节，通过外观角色即可调用相关功能。
 
 ### 2.4.7 实例
 ### 2.4.8 优点
@@ -1354,8 +1354,9 @@ Builder类：
 	    String paramB;
 	    String paramC;
 	
-	    public ConcreateFlyweight(String paramA) {
+	    public ConcreateFlyweight(String paramA，String paramaB) {
 	        this.paramA = paramA;
+			this.paramB = paramB;
 	    }
 	
 	    @Override
@@ -1373,7 +1374,7 @@ Builder类：
 	        if (mMap.containsKey(key)) {
 	            return mMap.get(key);
 	        } else {
-	            Flyweight flyweight = new ConcreateFlyweight(paramA);
+	            Flyweight flyweight = new ConcreateFlyweight(paramA,paramB);
 	            mMap.put(key, flyweight);
 	            return flyweight;
 	        }
@@ -1384,7 +1385,7 @@ Builder类：
 
 享元模式是一个考虑系统性能的设计模式，通过使用享元模式可以节约内存空间，提高系统的性能。
 
-享元模式的核心在于享元工厂类，享元工厂类的作用在于提供一个用于存储享元对象的享元池，用户需要对象时，首先从享元池中获取，如果享元池中不存在，则创建一个新的享元对象返回给用户，并在享元池中保存该新增对象。
+**享元模式的核心在于享元工厂类，享元工厂类的作用在于提供一个用于存储享元对象的享元池，用户需要对象时，首先从享元池中获取，如果享元池中不存在，则创建一个新的享元对象返回给用户，并在享元池中保存该新增对象。**
 
 享元模式以共享的方式高效地支持大量的细粒度对象，**享元对象能做到共享的关键是区分内部状态(`Internal State`)和外部状态(`External State`)。**
 
@@ -1493,9 +1494,10 @@ Builder类：
 	public class Proxy implements Subject {
 	
 	    static Subject mSubject;
-	
-	    public Proxy(Subject subject) {
-	        mSubject = subject;
+		
+		//代理模式 貌似不能从构造函数传入 需要屏蔽掉被代理对象
+	    public Proxy() {
+	        mSubject = new RealSubject();
 	    }
 	
 	    void beforeRequest() {
@@ -1518,11 +1520,11 @@ Builder类：
 ### 2.6.7 实例
 ### 2.6.8 优点
 
-- 代理模式能够协调调用者和被调用者，在一定程度上降低了系 统的耦合度。
+- 代理模式能够协调调用者和被调用者，在一定程度上降低了系统的耦合度。
 
-- 远程代理使得客户端可以访问在远程机器上的对象，远程机器 可能具有更好的计算性能与处理速度，可以快速响应并处理客户端请求。
+- 远程代理使得客户端可以访问在远程机器上的对象，远程机器可能具有更好的计算性能与处理速度，可以快速响应并处理客户端请求。
 
-- 虚拟代理通过使用一个小对象来代表一个大对象，可以减少系 统资源的消耗，对系统进行优化并提高运行速度。
+- 虚拟代理通过使用一个小对象来代表一个大对象，可以减少系统资源的消耗，对系统进行优化并提高运行速度。
 
 - 保护代理可以控制对真实对象的使用权限。
 
@@ -1725,7 +1727,10 @@ Builder类：
 - 系统需要支持命令的撤销(Undo)操作和恢复(Redo)操作。
 
 - 系统需要将一组操作组合在一起，即支持宏命令
+
+
 ### 3.1.11 模式应用
+
 ### 3.1.12 模式扩展
 
 宏命令又称为组合命令，它是命令模式和组合模式联用的产物。
@@ -1744,46 +1749,429 @@ Builder类：
 
 - 命令模式适用情况包括：需要将请求调用者和请求接收者解耦，使得调用者和接收者不直接交互；需要在不同的时间指定请求、将请求排队和执行请求；需要支持命令的撤销操作和恢复操作，需要将一组操作组合在一起，即支持宏命令。
 
+
 <span id="32"></span>
 ## 3.2 中介者模式(Mediator)2
 ### 3.2.1 模式动机
+
+在用户与用户直接聊天的设计方案中，用户对象之间存在很强的关联性，将导致系统出现如下问题：
+
+- 系统结构复杂：对象之间存在大量的相互关联和调用，若有一个对象发生变化，则需要跟踪和该对象关联的其他所有对象，并进行适当处理。
+
+- 对象可重用性差：由于一个对象和其他对象具有很强的关联，若没有其他对象的支持，一个对象很难被另一个系统或模块重用，这些对象表现出来更像一个不可分割的整体，职责较为混乱。
+
+- 系统扩展性低：增加一个新的对象需要在原有相关对象上增加引用，增加新的引用关系也需要调整原有对象，系统耦合度很高，对象操作很不灵活，扩展性差。
+
+- 在面向对象的软件设计与开发过程中，根据“单一职责原则”，我们应该尽量将对象细化，使其只负责或呈现单一的职责。
+
+- 对于一个模块，可能由很多对象构成，而且这些对象之间可能存在相互的引用，为了减少对象两两之间复杂的引用关系，使之成为一个松耦合的系统，我们需要使用中介者模式，这就是中介者模式的模式动机。
+
 ### 3.2.2 模式定义
+
+中介者模式(`Mediator Pattern`)定义：用一个中介对象来封装一系列的对象交互，中介者使各对象不需要显式地相互引用，从而使其耦合松散，而且可以独立地改变它们之间的交互。中介者模式又称为调停者模式，它是一种对象行为型模式。
+
 ### 3.2.3 模式结构
+
+中介者模式包含如下角色：
+
+- Mediator: 抽象中介者
+
+	定义了同事对象到中介者对象的接口，一般以抽象类的方式实现
+
+- ConcreteMediator: 具体中介者
+
+	继承于抽象中介者，实现了父类定义的方法，它从具体的同事对象接收消息，向具体的同事对象发出命令
+
+- Colleague: 抽象同事类
+
+	定义了中介者对象的接口，只知道中介者而不知道其他的同事对象
+
+- ConcreteColleague: 具体同事类
+
+	每个具体同事类都知道本身在小范围内的行为，而不知道在大范围内的目的
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/Mediator.jpg)
+
 ### 3.2.4 时序图
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/seq_Mediator.jpg)
+
 ### 3.2.5 代码分析
+
+	public abstract class Mediator {
+	    protected ConcreateColleagueA mConcreateColleagueA;
+	    protected ConcreateColleagueB mConcreateColleagueB;
+	
+	    public void setConcreateColleagueA(ConcreateColleagueA concreateColleagueA) {
+	        mConcreateColleagueA = concreateColleagueA;
+	    }
+	
+	    public void setConcreateColleagueB(ConcreateColleagueB concreateColleagueB) {
+	        mConcreateColleagueB = concreateColleagueB;
+	    }
+	
+	    /**
+	     * 抽象中介方法，由子类实现
+	     */
+	    public abstract void method();
+	
+	}
+	
+	public class ConcreateMediator extends Mediator {
+	    @Override
+	    public void method() {
+			//由中介者去实现剩余的逻辑
+	        mConcreateColleagueB.action();
+	    }
+	}
+	
+	public abstract class Colleague {
+	
+	    protected Mediator mMediator;
+	
+	    public Colleague(Mediator mediator) {
+	        mMediator = mediator;
+	    }
+	
+	    public abstract void action();
+	}
+	
+	public class ConcreateColleagueA extends Colleague {
+	
+	    public ConcreateColleagueA(Mediator mediator) {
+	        super(mediator);
+	    }
+	
+	    @Override
+	    public void action() {
+			//doSomething 
+			//通知mediator 自己做了什么事
+			mMediator.method();
+	    }
+	}
+	
+	public class ConcreateColleagueB extends Colleague {
+	
+	    public ConcreateColleagueB(Mediator mediator) {
+	        super(mediator);
+	    }
+	
+	    @Override
+	    public void action() {
+			//doSomething 
+	    }
+	}
+
 ### 3.2.6 模式分析
+
+中介者模式可以使对象之间的关系数量急剧减少。
+
+中介者承担两方面的职责：
+
+- 中转作用（结构性）：**通过中介者提供的中转作用，各个同事对象就不再需要显式引用其他同事，当需要和其他同事进行通信时，通过中介者即可**。该中转作用属于中介者在结构上的支持。
+
+- 协调作用（行为性）：中介者可以更进一步的对同事之间的关系进行封装，同事可以一致地和中介者进行交互，而不需要指明中介者需要具体怎么做，中介者根据封装在自身内部的协调逻辑，对同事的请求进行进一步处理，将同事成员之间的关系行为进行分离和封装。该协调作用属于中介者在行为上的支持。
+
 ### 3.2.7 实例
+
+实例：虚拟聊天室
+
+某论坛系统欲增加一个虚拟聊天室，允许论坛会员通过该聊天室进行信息交流，普通会员(CommonMember)可以给其他会员发送文本信息，钻石会员(DiamondMember)既可以给其他会员发送文本信息，还可以发送图片信息。该聊天室可以对不雅字符进行过滤，如“日”等字符；还可以对发送的图片大小进行控制。用中介者模式设计该虚拟聊天室。
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/Mediator_eg.jpg)
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/seq_Mediator_eg.jpg)
+
 ### 3.2.8 优点
+
+- 简化了对象之间的交互。
+
+- 将各同事解耦。
+
+- 减少子类生成。
+
+- 可以简化各同事类的设计和实现。
+
 ### 3.2.9 缺点
+
+- 在具体中介者类中包含了同事之间的交互细节，可能会导致具体中介者类非常复杂，使得系统难以维护。
+
 ### 3.2.10 适用环境
+
+- 系统中对象之间存在复杂的引用关系，产生的相互依赖关系结构混乱且难以理解。
+
+- 一个对象由于引用了其他很多对象并且直接和这些对象通信，导致难以复用该对象。
+
+- 想通过一个中间类来封装多个类中的行为，而又不想生成太多的子类。可以通过引入中介者类来实现，在中介者中定义对象。
+
+- 交互的公共行为，如果需要改变行为则可以增加新的中介者类。
+
 ### 3.2.11 模式应用
 ### 3.2.12 模式扩展
+
+中介者模式与迪米特法则
+
+- 在中介者模式中，通过创造出一个中介者对象，将系统中有关的对象所引用的其他对象数目减少到最少，使得一个对象与其同事之间的相互作用被这个对象与中介者对象之间的相互作用所取代。因此，中介者模式就是迪米特法则的一个典型应用。
+
+中介者模式与GUI开发
+
+- 中介者模式可以方便地应用于图形界面(GUI)开发中，在比较复杂的界面中可能存在多个界面组件之间的交互关系。
+
+- 对于这些复杂的交互关系，有时候我们可以引入一个中介者类，将这些交互的组件作为具体的同事类，将它们之间的引用和控制关系交由中介者负责，在一定程度上简化系统的交互，这也是中介者模式的常见应用之一。
+
 ### 3.2.13 总结
+
+- 中介者模式用一个中介对象来封装一系列的对象交互，中介者使各对象不需要显式地相互引用，从而使其耦合松散，而且可以独立地改变它们之间的交互。中介者模式又称为调停者模式，它是一种对象行为型模式。
+
+- **中介者模式包含四个角色：**
+
+	- 抽象中介者用于定义一个接口，该接口用于与各同事对象之间的通信；
+	
+	- 具体中介者是抽象中介者的子类，通过协调各个同事对象来实现协作行为，了解并维护它的各个同事对象的引用；
+	
+	- 抽象同事类定义各同事的公有方法；具体同事类是抽象同事类的子类，每一个同事对象都引用一个中介者对象；每一个同事对象在需要和其他同事对象通信时，先与中介者通信，通过中介者来间接完成与其他同事类的通信；
+	
+	- 在具体同事类中实现了在抽象同事类中定义的方法。
+
+- 通过引入中介者对象，可以将系统的网状结构变成以中介者为中心的星形结构，中介者承担了中转作用和协调作用。中介者类是中介者模式的核心，它对整个系统进行控制和协调，简化了对象之间的交互，还可以对对象间的交互进行进一步的控制。
+
+- 中介者模式的主要优点在于简化了对象之间的交互，将各同事解耦，还可以减少子类生成，对于复杂的对象之间的交互，通过引入中介者，可以简化各同事类的设计和实现；中介者模式主要缺点在于具体中介者类中包含了同事之间的交互细节，可能会导致具体中介者类非常复杂，使得系统难以维护。
+
+- 中介者模式适用情况包括：系统中对象之间存在复杂的引用关系，产生的相互依赖关系结构混乱且难以理解；一个对象由于引用了其他很多对象并且直接和这些对象通信，导致难以复用该对象；想通过一个中间类来封装多个类中的行为，而又不想生成太多的子类。
 
 <span id="33"></span>
 ## 3.3 观察者模式(Observer)5
 ### 3.3.1 模式动机
+
+建立一种对象与对象之间的依赖关系，一个对象发生改变时将自动通知其他对象，其他对象将相应做出反应。在此，**发生改变的对象称为观察目标，而被通知的对象称为观察者**，**一个观察目标可以对应多个观察者，而且这些观察者之间没有相互联系**，可以根据需要增加和删除观察者，使得系统更易于扩展，这就是观察者模式的模式动机。
+
 ### 3.3.2 模式定义
+
+观察者模式(`Observer Pattern`)：定义对象间的一种一对多依赖关系，使得每当一个对象状态发生改变时，其相关依赖对象皆得到通知并被自动更新。观察者模式又叫做发布-订阅（`Publish/Subscribe`）模式、模型-视图（Model/View）模式、源-监听器（Source/Listener）模式或从属者（Dependents）模式。
+
+观察者模式是一种对象行为型模式。
+
 ### 3.3.3 模式结构
+
+观察者模式包含如下角色：
+
+- Subject: 目标
+
+	被观察的角色，抽象主题角色把所有观察者对象的引用保存在一个集合里，每个观察目标都可以有任意数量的观察者，抽象观察目标提供接口，用来增加或减少观察者对象
+
+- ConcreteSubject: 具体目标
+
+	该角色将有关状态存入具体观察者对象，在具体观察目标的内部状态发生改变时，给所有注册过的观察者发出通知
+
+- Observer: 观察者
+
+	该角色是观察者的抽象类，定义了一个更新接口，用来接收观察目标发生更改时的通知并且更改自身
+
+- ConcreteObserver: 具体观察者
+
+	该角色实现了抽象观察者所定义的更新接口，以便在观察目标状态发生变化时更新自身的状态
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/Obeserver.jpg)
+
 ### 3.3.4 时序图
+
+![](http://design-patterns.readthedocs.io/zh_CN/latest/_images/seq_Obeserver.jpg)
+
 ### 3.3.5 代码分析
+
+**JDK内置了 Observer 和 Observable 对象 可以用来实现观察者模式，下面的代码只是简单的模拟了观察者模式**
+
+	public abstract class Subject {
+	    private ArrayList<Observer> mObservers = new ArrayList<>();
+	
+	    public void attach(Observer observer) {
+	        mObservers.add(observer);
+	    }
+	
+	    public void detach(Observer observer) {
+	        mObservers.remove(observer);
+	    }
+	
+	    public void notifyChange(int state) {
+	        for (Observer observer : mObservers) {
+	            observer.update(state);
+	        }
+	    }
+	
+	}
+	
+	public class ConcreateSubject extends Subject {
+	    private int state;
+	
+	    public void setState(int state) {
+	        this.state = state;
+	        notifyChange(state);
+	    }
+	
+	    public int getState() {
+	        return state;
+	    }
+	
+	}
+	
+	public abstract class Observer {
+	    abstract void update(int state);
+	}
+	
+	public class ConcreateObserver extends Observer {
+	
+	    private int observerState;
+	
+	    @Override
+	    void update(int state) {
+	        observerState = state;
+	    }
+	
+	}
+
 ### 3.3.6 模式分析
+
+- 观察者模式描述了如何建立对象与对象之间的依赖关系，如何构造满足这种需求的系统。
+
+- 这一模式中的关键对象是观察目标和观察者，一个目标可以有任意数目的与之相依赖的观察者，一旦目标的状态发生改变，所有的观察者都将得到通知。
+
+- 作为对这个通知的响应，每个观察者都将即时更新自己的状态，以与目标状态同步，这种交互也称为发布-订阅(publishsubscribe)。目标是通知的发布者，它发出通知时并不需要知道谁是它的观察者，可以有任意数目的观察者订阅它并接收通知。
+
 ### 3.3.7 实例
 ### 3.3.8 优点
+
+- 观察者模式可以实现表示层和数据逻辑层的分离，并定义了稳定的消息更新传递机制，抽象了更新接口，使得可以有各种各样不同的表示层作为具体观察者角色。
+
+- 观察者模式在观察目标和观察者之间建立一个抽象的耦合。
+
+- 观察者模式支持广播通信。
+
+- 观察者模式符合“开闭原则”的要求。
+
 ### 3.3.9 缺点
+
+- 如果一个观察目标对象有很多直接和间接的观察者的话，将所有的观察者都通知到会花费很多时间。
+
+- 如果在观察者和观察目标之间有循环依赖的话，观察目标会触发它们之间进行循环调用，可能导致系统崩溃。
+
+- 观察者模式没有相应的机制让观察者知道所观察的目标对象是怎么发生变化的，而仅仅只是知道观察目标发生了变化
+
 ### 3.3.10 适用环境
+
+- 一个抽象模型有两个方面，其中一个方面依赖于另一个方面。将这些方面封装在独立的对象中使它们可以各自独立地改变和复用。
+
+- 一个对象的改变将导致其他一个或多个对象也发生改变，而不知道具体有多少对象将发生改变，可以降低对象之间的耦合度。
+
+- 一个对象必须通知其他对象，而并不知道这些对象是谁。
+
+- 需要在系统中创建一个触发链，A对象的行为将影响B对象，B对象的行为将影响C对象……，可以使用观察者模式创建一种链式触发机制。
+
 ### 3.3.11 模式应用
 ### 3.3.12 模式扩展
 ### 3.3.13 总结
 
+- 观察者模式定义对象间的一种一对多依赖关系，使得每当一个对象状态发生改变时，其相关依赖对象皆得到通知并被自动更新。观察者模式又叫做发布-订阅模式、模型-视图模式、源-监听器模式或从属者模式。观察者模式是一种对象行为型模式。
+
+- 观察者模式包含四个角色：目标又称为主题，它是指被观察的对象；具体目标是目标类的子类，通常它包含有经常发生改变的数据，当它的状态发生改变时，向它的各个观察者发出通知；观察者将对观察目标的改变做出反应；在具体观察者中维护一个指向具体目标对象的引用，它存储具体观察者的有关状态，这些状态需要和具体目标的状态保持一致。
+
+- 观察者模式定义了一种一对多的依赖关系，让多个观察者对象同时监听某一个目标对象，当这个目标对象的状态发生变化时，会通知所有观察者对象，使它们能够自动更新。
+
+- 观察者模式的主要优点在于可以实现表示层和数据逻辑层的分离，并在观察目标和观察者之间建立一个抽象的耦合，支持广播通信；其主要缺点在于如果一个观察目标对象有很多直接和间接的观察者的话，将所有的观察者都通知到会花费很多时间，而且如果在观察者和观察目标之间有循环依赖的话，观察目标会触发它们之间进行循环调用，可能导致系统崩溃。
+
+- 观察者模式适用情况包括：一个抽象模型有两个方面，其中一个方面依赖于另一个方面；一个对象的改变将导致其他一个或多个对象也发生改变，而不知道具体有多少对象将发生改变；一个对象必须通知其他对象，而并不知道这些对象是谁；需要在系统中创建一个触发链。
+
+- 在JDK的java.util包中，提供了Observable类以及Observer接口，它们构成了Java语言对观察者模式的支持。
+
+
 <span id="34"></span>
 ## 3.4 状态模式(State)3
 ### 3.4.1 模式动机
+
+- 在很多情况下，**一个对象的行为取决于一个或多个动态变化的属性，这样的属性叫做状态**，这样的对象叫做有状态的(stateful)对象，这样的对象状态是从事先定义好的一系列值中取出的。当一个这样的对象与外部事件产生互动时，其内部状态就会改变，从而使得系统的行为也随之发生变化。
+
+- 在UML中可以使用状态图来描述对象状态的变化。
+
 ### 3.4.2 模式定义
+
+状态模式(`State Pattern`) ：允许一个对象在其内部状态改变时改变它的行为，对象看起来似乎修改了它的类。其别名为状态对象(`Objects for States`)
+
+状态模式是一种对象行为型模式。
+
 ### 3.4.3 模式结构
+
+状态模式包含如下角色：
+
+- Context: 环境类
+
+	定义客户感兴趣的接口，维护一个State子类的实例，这个实例定义了对象的当前状态
+
+- State: 抽象状态类
+
+	可以是抽象类或者接口，定义一个或一组接口，表示该状态下的行为
+
+- ConcreteState: 具体状态类
+
+	每一个具体的状态类实现抽象State中定义的接口，从而达到不同状态下的不同行为
+
+![](https://github.com/me115/design_patterns/raw/master/_static/State.jpg)
+
 ### 3.4.4 时序图
+
+![](https://github.com/me115/design_patterns/raw/master/_static/seq_State.jpg)
+
+![](http://ww1.sinaimg.cn/large/6ab93b35gy1flhs4hl3tcj208k05aglj.jpg)
+
 ### 3.4.5 代码分析
+
+	public interface State {
+	    void doSomething();
+	}
+	
+	public class ConcreateStateA implements State {
+	
+	    @Override
+	    public void doSomething() {
+	
+	    }
+	}
+	
+	public class ConcreateStateB implements State {
+	    @Override
+	    public void doSomething() {
+	        
+	    }
+	}
+	
+	public class Context {
+	
+	    private State mState = new ConcreateStateB();
+	
+	    public void changeState() {
+	        if (mState instanceof ConcreateColleagueA) {
+	            mState = new ConcreateStateA();
+	        } else {
+	            mState = new ConcreateStateB();
+	        }
+	    }
+	
+	    public void doSomething() {
+	        mState.doSomething();
+	    }
+	
+	}
+
 ### 3.4.6 模式分析
+
+- 状态模式描述了对象状态的变化以及对象如何在每一种状态下表现出不同的行为。
+
+- 状态模式的关键是引入了一个抽象类来专门表示对象的状态，这个类我们叫做抽象状态类，而对象的每一种具体状态类都继承了该类，并在不同具体状态类中实现了不同状态的行为，包括各种状态之间的转换。
+
+在状态模式结构中需要理解环境类与抽象状态类的作用：
+
+- 环境类实际上就是拥有状态的对象，环境类有时候可以充当状态管理器(State Manager)的角色，可以在环境类中对状态进行切换操作。
+
+- 抽象状态类可以是抽象类，也可以是接口，不同状态类就是继承这个父类的不同子类，状态类的产生是由于环境类存在多个状态，同时还满足两个条件： 这些状态经常需要切换，在不同的状态下对象的行为不同。因此可以将不同对象下的行为单独提取出来封装在具体的状态类中，使得环境类对象在其内部状态改变时可以改变它的行为，对象看起来似乎修改了它的类，而实际上是由于切换到不同的具体状态类实现的。由于环境类可以设置为任一具体状态类，因此它针对抽象状态类进行编程，在程序运行时可以将任一具体状态类的对象设置到环境类中，从而使得环境类可以改变内部状态，并且改变行为。
+
 ### 3.4.7 实例
 ### 3.4.8 优点
 ### 3.4.9 缺点
