--- a/设计模式学习笔记/设计模式学习笔记.md
+++ b/设计模式学习笔记/设计模式学习笔记.md
@@ -2174,24 +2174,181 @@ Builder类：
 
 ### 3.4.7 实例
 ### 3.4.8 优点
+
+- 封装了转换规则。
+
+- 枚举可能的状态，在枚举状态之前需要确定状态种类。
+
+- 将所有与某个状态有关的行为放到一个类中，并且可以方便地增加新的状态，只需要改变对象状态即可改变对象的行为。
+
+- 允许状态转换逻辑与状态对象合成一体，而不是某一个巨大的条件语句块。
+
+- 可以让多个环境对象共享一个状态对象，从而减少系统中对象的个数。
+
 ### 3.4.9 缺点
+
+- 状态模式的使用必然会增加系统类和对象的个数。
+
+- 状态模式的结构与实现都较为复杂，如果使用不当将导致程序结构和代码的混乱。
+
+- 状态模式对“开闭原则”的支持并不太好，对于可以切换状态的状态模式，增加新的状态类需要修改那些负责状态转换的源代码，否则无法切换到新增状态；而且修改某个状态类的行为也需修改对应类的源代码。
+
 ### 3.4.10 适用环境
+
+- 对象的行为依赖于它的状态（属性）并且可以根据它的状态改变而改变它的相关行为。
+
+- 代码中包含大量与对象状态有关的条件语句，这些条件语句的出现，会导致代码的可维护性和灵活性变差，不能方便地增加和删除状态，使客户类与类库之间的耦合增强。在这些条件语句中包含了对象的行为，而且这些条件对应于对象的各种状态。
+
 ### 3.4.11 模式应用
 ### 3.4.12 模式扩展
+
+**共享状态**
+
+- 在有些情况下多个环境对象需要共享同一个状态，如果希望在系统中实现多个环境对象实例共享一个或多个状态对象，那么需要将这些状态对象定义为环境的静态成员对象。
+
+**简单状态模式与可切换状态的状态模式**
+
+- 简单状态模式：简单状态模式是指状态都相互独立，状态之间无须进行转换的状态模式，这是最简单的一种状态模式。对于这种状态模式，每个状态类都封装与状态相关的操作，而无须关心状态的切换，可以在客户端直接实例化状态类，然后将状态对象设置到环境类中。如果是这种简单的状态模式，它遵循“开闭原则”，在客户端可以针对抽象状态类进行编程，而将具体状态类写到配置文件中，同时增加新的状态类对原有系统也不造成任何影响。
+
+- 可切换状态的状态模式：大多数的状态模式都是可以切换状态的状态模式，在实现状态切换时，在具体状态类内部需要调用环境类Context的setState()方法进行状态的转换操作，在具体状态类中可以调用到环境类的方法，因此状态类与环境类之间通常还存在关联关系或者依赖关系。通过在状态类中引用环境类的对象来回调环境类的setState()方法实现状态的切换。在这种可以切换状态的状态模式中，增加新的状态类可能需要修改其他某些状态类甚至环境类的源代码，否则系统无法切换到新增状态。
+
 ### 3.4.13 总结
+
+- 状态模式允许一个对象在其内部状态改变时改变它的行为，对象看起来似乎修改了它的类。其别名为状态对象，状态模式是一种对象行为型模式。
+
+- 状态模式包含三个角色：环境类又称为上下文类，它是拥有状态的对象，在环境类中维护一个抽象状态类State的实例，这个实例定义当前状态，在具体实现时，它是一个State子类的对象，可以定义初始状态；抽象状态类用于定义一个接口以封装与环境类的一个特定状态相关的行为；具体状态类是抽象状态类的子类，每一个子类实现一个与环境类的一个状态相关的行为，每一个具体状态类对应环境的一个具体状态，不同的具体状态类其行为有所不同。
+
+- 状态模式描述了对象状态的变化以及对象如何在每一种状态下表现出不同的行为。
+
+- 状态模式的主要优点在于封装了转换规则，并枚举可能的状态，它将所有与某个状态有关的行为放到一个类中，并且可以方便地增加新的状态，只需要改变对象状态即可改变对象的行为，还可以让多个环境对象共享一个状态对象，从而减少系统中对象的个数；其缺点在于使用状态模式会增加系统类和对象的个数，且状态模式的结构与实现都较为复杂，如果使用不当将导致程序结构和代码的混乱，对于可以切换状态的状态模式不满足“开闭原则”的要求。
+
+- 状态模式适用情况包括：对象的行为依赖于它的状态（属性）并且可以根据它的状态改变而改变它的相关行为；代码中包含大量与对象状态有关的条件语句，这些条件语句的出现，会导致代码的可维护性和灵活性变差，不能方便地增加和删除状态，使客户类与类库之间的耦合增强。
+
 
 <span id="35"></span>
 ## 3.5 策略模式(Strategy)4
 ### 3.5.1 模式动机
+
+- 完成一项任务，往往可以有多种不同的方式，每一种方式称为一个策略，可以根据环境或者条件的不同选择不同的策略来完成该项任务。
+
+- 在软件开发中也常常遇到类似的情况，实现某一个功能有多个途径，此时可以使用一种设计模式来使得系统可以灵活地选择解决途径，也能够方便地增加新的解决途径。
+
+- 在软件系统中，有许多算法可以实现某一功能，如查找、排序等，一种常用的方法是硬编码(Hard Coding)在一个类中，如需要提供多种查找算法，可以将这些算法写到一个类中，**在该类中提供多个方法，每一个方法对应一个具体的查找算法；当然也可以将这些查找算法封装在一个统一的方法中，通过if…else…等条件判断语句来进行选择。这两种实现方法我们都可以称之为硬编码**，如果需要增加一种新的查找算法，需要修改封装算法类的源代码；更换查找算法，也需要修改客户端调用代码。在这个算法类中封装了大量查找算法，该类代码将较复杂，维护较为困难。
+
+- 除了提供专门的查找算法类之外，还可以在客户端程序中直接包含算法代码，这种做法更不可取，将导致客户端程序庞大而且难以维护，如果存在大量可供选择的算法时问题将变得更加严重。
+
+- 为了解决这些问题，可以定义一些独立的类来封装不同的算法，每一个类封装一个具体的算法，在这里，**每一个封装算法的类我们都可以称之为策略(Strategy)**，为了保证这些策略的一致性，一般会用一个抽象的策略类来做算法的定义，而具体每种算法则对应于一个具体策略类。
+
 ### 3.5.2 模式定义
+
+策略模式(`Strategy Pattern`)：定义一系列算法，将每一个算法封装起来，并让它们可以相互替换。策略模式让算法独立于使用它的客户而变化，也称为政策模式(Policy)。
+
+策略模式是一种对象行为型模式。
+
 ### 3.5.3 模式结构
+
+策略模式包含如下角色：
+
+- Context: 环境类
+
+	用来操作策略的上下文环境
+
+- Strategy: 抽象策略类
+
+	策略的抽象
+
+- ConcreteStrategy: 具体策略类
+
+	具体的策略实现类
+
+![](https://github.com/me115/design_patterns/raw/master/_static/Strategy.jpg)
+
 ### 3.5.4 时序图
+
+![](https://github.com/me115/design_patterns/raw/master/_static/seq_Strategy.jpg)
+
 ### 3.5.5 代码分析
+
+	public interface Strategy {
+	    void algorithm();
+	}
+	
+	public class ConcreateStrategyA implements Strategy {
+	    @Override
+	    public void algorithm() {
+	
+	    }
+	}
+	
+	public class Context {
+	    private Strategy mStrategy;
+	
+	    public void setStrategy(Strategy strategy) {
+	        mStrategy = strategy;
+	    }
+	
+	    public void algorithm() {
+	        mStrategy.algorithm();
+	    }
+	
+	}
+
 ### 3.5.6 模式分析
+
+- 策略模式是一个比较容易理解和使用的设计模式，策略模式是对算法的封装，它把算法的责任和算法本身分割开，委派给不同的对象管理。策略模式通常把一个系列的算法封装到一系列的策略类里面，作为一个抽象策略类的子类。用一句话来说，就是“准备一组算法，并将每一个算法封装起来，使得它们可以互换”。
+
+- 在策略模式中，应当由客户端自己决定在什么情况下使用什么具体策略角色。
+
+- 策略模式仅仅封装算法，提供新算法插入到已有系统中，以及老算法从系统中“退休”的方便，策略模式并不决定在何时使用何种算法，算法的选择由客户端来决定。这在一定程度上提高了系统的灵活性，但是客户端需要理解所有具体策略类之间的区别，以便选择合适的算法，这也是策略模式的缺点之一，在一定程度上增加了客户端的使用难度。
+
 ### 3.5.7 实例
 ### 3.5.8 优点
+
+- 策略模式提供了对“开闭原则”的完美支持，用户可以在不修改原有系统的基础上选择算法或行为，也可以灵活地增加新的算法或行为。
+
+- 策略模式提供了管理相关的算法族的办法。
+
+- 策略模式提供了可以替换继承关系的办法。
+
+- 使用策略模式可以避免使用多重条件转移语句
+
 ### 3.5.9 缺点
+
+- 客户端必须知道所有的策略类，并自行决定使用哪一个策略类。
+
+- 策略模式将造成产生很多策略类，可以通过使用享元模式在一定程度上减少对象的数量。
+
 ### 3.5.10 适用环境
+
+- 如果在一个系统里面有许多类，它们之间的区别仅在于它们的行为，那么使用策略模式可以动态地让一个对象在许多行为中选择一种行为。
+
+- 一个系统需要动态地在几种算法中选择一种。
+
+- 如果一个对象有很多的行为，如果不用恰当的模式，这些行为就只好使用多重的条件选择语句来实现。
+
+- 不希望客户端知道复杂的、与算法相关的数据结构，在具体策略类中封装算法和相关的数据结构，提高算法的保密性与安全性。
+
 ### 3.5.11 模式应用
 ### 3.5.12 模式扩展
+**策略模式与状态模式**
+
+- **可以通过环境类状态的个数来决定是使用策略模式还是状态模式。**
+
+- 策略模式的环境类自己选择一个具体策略类，具体策略类无须关心环境类；而状态模式的环境类由于外在因素需要放进一个具体状态中，以便通过其方法实现状态的切换，因此环境类和状态类之间存在一种双向的关联关系。
+
+- 使用策略模式时，客户端需要知道所选的具体策略是哪一个，而使用状态模式时，客户端无须关心具体状态，环境类的状态会根据用户的操作自动转换。
+
+- 如果系统中某个类的对象存在多种状态，不同状态下行为有差异，而且这些状态之间可以发生转换时使用状态模式；如果系统中某个类的某一行为存在多种实现方式，而且这些实现方式可以互换时使用策略模式。
+
+
 ### 3.5.13 总结
+
+- 在策略模式中定义了一系列算法，将每一个算法封装起来，并让它们可以相互替换。策略模式让算法独立于使用它的客户而变化，也称为政策模式。策略模式是一种对象行为型模式。
+
+- 策略模式包含三个角色：环境类在解决某个问题时可以采用多种策略，在环境类中维护一个对抽象策略类的引用实例；抽象策略类为所支持的算法声明了抽象方法，是所有策略类的父类；具体策略类实现了在抽象策略类中定义的算法。
+
+- 策略模式是对算法的封装，它把算法的责任和算法本身分割开，委派给不同的对象管理。策略模式通常把一个系列的算法封装到一系列的策略类里面，作为一个抽象策略类的子类。
+
+- 策略模式主要优点在于对“开闭原则”的完美支持，在不修改原有系统的基础上可以更换算法或者增加新的算法，它很好地管理算法族，提高了代码的复用性，是一种替换继承，避免多重条件转移语句的实现方式；其缺点在于客户端必须知道所有的策略类，并理解其区别，同时在一定程度上增加了系统中类的个数，可能会存在很多策略类。
+
+- 策略模式适用情况包括：在一个系统里面有许多类，它们之间的区别仅在于它们的行为，使用策略模式可以动态地让一个对象在许多行为中选择一种行为；一个系统需要动态地在几种算法中选择一种；避免使用难以维护的多重条件选择语句；希望在具体策略类中封装算法和与相关的数据结构。
